# litevad

./: README.md
android/demo/app/: build.gradle
android/demo/app/src/main/cpp/: CMakeLists.txt  litevad-jni.cpp
android/demo/app/src/main/java/com/example/litevad_demo/: MainActivity.java
android/jni/: Android.mk  Application.mk
example/android/: gradlew  settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/cpp/: CMakeLists.txt  litevad-jni.cpp
example/android/app/src/main/java/com/example/litevad_demo/: MainActivity.java
example/android/gradle/wrapper/: gradle-wrapper.properties
example/linux/: CMakeLists.txt  litevad_main.c
example/unix/: CMakeLists.txt
include/: litevad.h
src/: litevad.c
